[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis"
version = "0.1.0"
description = "A utility package for data inspection, analysis, and interactive visualization"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["data-analysis", "visualization", "data-inspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scipy>=1.5.0",
    "plotly>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/data-analysis"
Documentation = "https://github.com/yourusername/data-analysis"
Repository = "https://github.com/yourusername/data-analysis.git"

[tool.setuptools]
packages = ["data_analysis"]
